--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "tsc && node drivetest_scraper.js"
+    "start": "tsc && node index.js"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.5.8",
     "@types/puppeteer": "^5.4.2",
+    "@types/tough-cookie": "^4.0.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
     "async-sema": "^3.1.0",
     "node-fetch": "^2.6.1",
-    "public-ip": "^4.0.3",
     "puppeteer": "^5.5.0"
   }
 }
