--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "tsc && node index.js"
+    "start": "node cli.js",
+    "build": "tsc",
+    "package": "pkg -c ./pkg.config.json -o drivetest-availabilities -t linux,macos,win ./cli.js",
+    "package:dev": "yarn build && yarn package"
   },
   "devDependencies": {
     "@types/node-fetch": "^2.5.8",
-    "@types/puppeteer": "^5.4.2",
     "@types/tough-cookie": "^4.0.0",
+    "pkg": "^5.1.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
     "async-sema": "^3.1.0",
+    "commander": "^7.2.0",
+    "dayjs": "^1.10.4",
     "node-fetch": "^2.6.1",
-    "puppeteer": "^5.5.0"
+    "progress": "^2.0.3",
+    "puppeteer": "^8.0.0"
   }
 }
