--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@types/node-fetch": "^2.5.8",
+    "@types/pino": "^6.3.8",
+    "@types/pino-multi-stream": "^5.1.1",
     "@types/tough-cookie": "^4.0.0",
     "pkg": "^5.1.0",
     "typescript": "^4.1.3"
@@ -24,6 +26,9 @@
     "commander": "^7.2.0",
     "dayjs": "^1.10.4",
     "node-fetch": "^2.6.1",
+    "pino": "^6.11.3",
+    "pino-multi-stream": "^5.3.0",
+    "pino-pretty": "^4.7.1",
     "progress": "^2.0.3",
     "puppeteer": "^8.0.0"
   }
