--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "drivetest-ca-availabilities",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "See available dates for driving test on drivetest.ca",
   "main": "index.js",
   "repository": "https://github.com/silverAndroid/drivetest-ca-availabilities.git",
@@ -17,6 +17,7 @@
     "@types/node-fetch": "^2.5.8",
     "@types/pino": "^6.3.8",
     "@types/pino-multi-stream": "^5.1.1",
+    "@types/semver": "^7.3.5",
     "@types/tough-cookie": "^4.0.0",
     "pkg": "^5.1.0",
     "typescript": "^4.1.3"
@@ -30,6 +31,7 @@
     "pino-multi-stream": "^5.3.0",
     "pino-pretty": "^4.7.1",
     "progress": "^2.0.3",
-    "puppeteer": "^8.0.0"
+    "puppeteer": "^8.0.0",
+    "semver": "^7.3.5"
   }
 }
