--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node-fetch": "^2.5.8",
     "@types/pino": "^6.3.8",
     "@types/pino-multi-stream": "^5.1.1",
+    "@types/puppeteer": "^5.4.4",
     "@types/semver": "^7.3.5",
     "@types/tough-cookie": "^4.0.0",
     "pkg": "^5.1.0",
@@ -31,7 +32,9 @@
     "pino-multi-stream": "^5.3.0",
     "pino-pretty": "^4.7.1",
     "progress": "^2.0.3",
-    "puppeteer": "^8.0.0",
+    "puppeteer": "5",
+    "puppeteer-extra": "^3.1.18",
+    "puppeteer-extra-plugin-stealth": "^2.7.8",
     "semver": "^7.3.5"
   }
 }
