fix: stealth plugin not working with pkg

--- a/pkg.config.json
+++ b/pkg.config.json
@@ -1,7 +1,8 @@
 {
   "pkg": {
     "assets": [
-      "./evaluate.js"
+      "./evaluate.js",
+      "node_modules/puppeteer-extra-plugin-stealth/**/*.*"
     ]
   }
 }
