fix: remove expiry from config example

--- a/config.json.example
+++ b/config.json.example
@@ -5,5 +5,5 @@
   // must be formatted the same way as on your license (with dashes)
   "licenseNumber": "",
   // YYYY/MM/DD
-  "licenseExpiry": "2022/03/15"
+  "licenseExpiry": ""
 }
