--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@types/inquirer": "^7.3.3",
     "@types/node-fetch": "^2.5.8",
     "@types/pino": "^6.3.8",
     "@types/pino-multi-stream": "^5.1.1",
@@ -31,6 +32,7 @@
     "async-sema": "^3.1.0",
     "commander": "^7.2.0",
     "dayjs": "^1.10.4",
+    "inquirer": "^8.1.2",
     "node-fetch": "^2.6.1",
     "pino": "^6.11.3",
     "pino-multi-stream": "^5.3.0",
