--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^1.0.0-beta.10",
     "@types/inquirer": "^7.3.3",
     "@types/node-fetch": "^2.5.8",
     "@types/pino": "^6.3.8",
@@ -29,6 +30,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@tauri-apps/api": "^1.0.0-beta.8",
     "async-sema": "^3.1.0",
     "commander": "^7.2.0",
     "dayjs": "^1.10.4",
