--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
         "plugin:@typescript-eslint/recommended",
         "preact"
     ],
+    "ignorePatterns": ["build/"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 12
