--- a/web/package.json
+++ b/web/package.json
@@ -10,16 +10,6 @@
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "test": "jest ./tests"
   },
-  "eslintConfig": {
-    "parser": "@typescript-eslint/parser",
-    "extends": [
-      "preact",
-      "plugin:@typescript-eslint/recommended"
-    ],
-    "ignorePatterns": [
-      "build/"
-    ]
-  },
   "dependencies": {
     "preact": "^10.3.1",
     "preact-render-to-string": "^5.1.4",
@@ -36,7 +26,9 @@
     "eslint-config-preact": "^1.1.1",
     "jest": "^26.2.2",
     "jest-preset-preact": "^4.0.2",
+    "node-sass": "^6.0.1",
     "preact-cli": "^3.0.0",
+    "sass-loader": "10",
     "sirv-cli": "^1.0.0-next.3",
     "typescript": "^3.7.5"
   },
