--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,8 @@
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
+        "plugin:import/recommended",
+        "plugin:import/typescript",
         "preact"
     ],
     "ignorePatterns": ["build/"],
@@ -19,6 +21,30 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "@typescript-eslint/no-explicit-any": "off"
+        "@typescript-eslint/no-explicit-any": "off",
+        "import/order": [
+            "error",
+            {
+              "pathGroups": [
+                { "pattern": "~*/**", "group": "internal", "position": "after" }
+              ],
+              "groups": [
+                "builtin",
+                "external",
+                "unknown",
+                ["internal", "sibling", "parent"],
+                "index",
+                "object",
+                "type"
+              ],
+              "alphabetize": {
+                "order": "asc",
+                "caseInsensitive": true
+              },
+              "newlines-between": "always"
+            }
+          ],
+          "import/no-unresolved": ["error", { "ignore": ["^~"] }
+        ]
     }
 }
