--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -35,8 +35,13 @@
         /* Module Resolution Options */
         "moduleResolution": "node",               /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
         "esModuleInterop": true,                  /* */
-        // "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
-        // "paths": {},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+        "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
+        "paths": {
+            "~components/*": ["src/components/*"],
+            "~constants/*": ["src/constants/*"],
+            "~hooks/*": ["src/hooks/*"],
+            "~pages/*":["src/routes/*"]
+        },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
         // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
         // "typeRoots": [],                       /* List of folders to include type definitions from. */
         // "types": [],                           /* Type declaration files to be included in compilation. */
