fix: import paths not working in preact

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -61,5 +61,5 @@
         /* Advanced Options */
         "skipLibCheck": true                      /* Skip type checking of declaration files. */
     },
-    "include": ["src/**/*", "tests/**/*"]
+    "include": ["src/**/*", "tests/**/*", "preact.config.js"]
 }
