--- a/web/package.json
+++ b/web/package.json
@@ -30,6 +30,7 @@
     "preact-cli": "^3.0.0",
     "sass-loader": "10",
     "sirv-cli": "^1.0.0-next.3",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^3.7.5"
   },
   "jest": {
