--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -3,7 +3,7 @@
         /* Basic Options */
         "target": "ES5",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */
         "module": "ESNext",                       /* Specify module code generation: 'none', commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
-        // "lib": [],                             /* Specify library files to be included in the compilation:  */
+        "lib": ["ES6", "DOM"],                             /* Specify library files to be included in the compilation:  */
         "allowJs": true,                          /* Allow javascript files to be compiled. */
         // "checkJs": true,                       /* Report errors in .js files. */
         "jsx": "react",                           /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
@@ -21,9 +21,9 @@
 
         /* Strict Type-Checking Options */
         "strict": true,                           /* Enable all strict type-checking options. */
-        // "noImplicitAny": true,                 /* Raise error on expressions and declarations with an implied 'any' type. */
-        // "strictNullChecks": true,              /* Enable strict null checks. */
-        // "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
+        "noImplicitAny": true,                 /* Raise error on expressions and declarations with an implied 'any' type. */
+        "strictNullChecks": true,              /* Enable strict null checks. */
+        "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
         // "alwaysStrict": true,                  /* Parse in strict mode and emit "use strict" for each source file. */
 
         /* Additional Checks */
