--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,50 +1,47 @@
 {
-    "env": {
-        "browser": true,
-        "commonjs": true,
-        "es2021": true,
-        "node": true
-    },
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:import/recommended",
-        "plugin:import/typescript",
-        "preact"
+  "env": {
+    "browser": true,
+    "commonjs": true,
+    "es2021": true,
+    "node": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:import/recommended",
+    "plugin:import/typescript",
+    "preact"
+  ],
+  "ignorePatterns": ["build/"],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 12
+  },
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off",
+    "import/order": [
+      "error",
+      {
+        "pathGroups": [
+          { "pattern": "~*/**", "group": "internal", "position": "after" }
+        ],
+        "groups": [
+          "builtin",
+          "external",
+          "unknown",
+          ["internal", "sibling", "parent"],
+          "index",
+          "object",
+          "type"
+        ],
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        },
+        "newlines-between": "always"
+      }
     ],
-    "ignorePatterns": ["build/"],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": 12
-    },
-    "plugins": [
-        "@typescript-eslint"
-    ],
-    "rules": {
-        "@typescript-eslint/no-explicit-any": "off",
-        "import/order": [
-            "error",
-            {
-              "pathGroups": [
-                { "pattern": "~*/**", "group": "internal", "position": "after" }
-              ],
-              "groups": [
-                "builtin",
-                "external",
-                "unknown",
-                ["internal", "sibling", "parent"],
-                "index",
-                "object",
-                "type"
-              ],
-              "alphabetize": {
-                "order": "asc",
-                "caseInsensitive": true
-              },
-              "newlines-between": "always"
-            }
-          ],
-          "import/no-unresolved": ["error", { "ignore": ["^~"] }
-        ]
-    }
+    "import/no-unresolved": ["error", { "ignore": ["^~"] }]
+  }
 }
