refactor: made cli more modular to support new GUI

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@ Thumbs.db
 
 config.json
 node_modules
-*.js
+tools/executors/**/*.js
+!*.config.js
 .local-chromium/
 drivetest-availabilities*
+drivetest-*.log
