--- a/pkg.config.json
+++ b/pkg.config.json
@@ -1,7 +1,7 @@
 {
   "pkg": {
     "assets": [
-      "./evaluate.js",
+      "./dist/tools/executors/cli/0.main.js",
       "node_modules/puppeteer-extra-plugin-stealth/**/*.*"
     ]
   }
