feat: initialized react web app

--- a/nx.json
+++ b/nx.json
@@ -35,6 +35,13 @@
     },
     "scraper": {
       "tags": []
+    },
+    "web": {
+      "tags": []
+    },
+    "web-e2e": {
+      "tags": [],
+      "implicitDependencies": ["web"]
     }
   }
 }
