--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build:cli": "nx build cli",
     "package:cli": "pkg -c ./pkg.config.json -o drivetest-availabilities ./dist/tools/executors/cli/main.js",
     "package:cli:dev": "yarn build:cli && yarn package:cli",
+    "start:web": "nx serve web",
+    "build:web": "nx build web",
     "prepare": "husky install",
     "start": "nx serve",
     "build": "nx build",
@@ -20,6 +22,7 @@
   "dependencies": {
     "async-sema": "^3.1.0",
     "commander": "^7.2.0",
+    "core-js": "^3.6.5",
     "dayjs": "^1.10.4",
     "inquirer": "^8.1.2",
     "node-fetch": "^2.6.1",
@@ -30,17 +33,25 @@
     "puppeteer": "5",
     "puppeteer-extra": "^3.1.18",
     "puppeteer-extra-plugin-stealth": "^2.7.8",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "regenerator-runtime": "0.13.7",
     "semver": "^7.3.5",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@nrwl/cli": "12.10.0",
+    "@nrwl/cypress": "12.10.0",
     "@nrwl/eslint-plugin-nx": "12.10.0",
     "@nrwl/jest": "12.10.0",
     "@nrwl/linter": "12.10.0",
     "@nrwl/node": "^12.10.0",
+    "@nrwl/react": "^12.10.0",
     "@nrwl/tao": "12.10.0",
+    "@nrwl/web": "12.10.0",
     "@nrwl/workspace": "12.10.0",
+    "@testing-library/react": "11.2.6",
+    "@testing-library/react-hooks": "7.0.1",
     "@types/inquirer": "^7.3.3",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
@@ -48,12 +59,21 @@
     "@types/pino": "^6.3.8",
     "@types/pino-multi-stream": "^5.1.1",
     "@types/puppeteer": "^5.4.4",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
     "@types/semver": "^7.3.5",
     "@types/tough-cookie": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "~4.31.1",
     "@typescript-eslint/parser": "~4.31.1",
+    "babel-jest": "27.2.3",
+    "cypress": "^8.3.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.23.1",
+    "eslint-plugin-react-hooks": "4.2.0",
     "husky": "^7.0.1",
     "jest": "27.2.3",
     "lint-staged": "^11.1.2",
