feat: replaced react with preact

--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -11,6 +11,12 @@
       "rules": {}
     },
     {
+      "files": ["*.tsx"],
+      "rules": {},
+      "parser": "@typescript-eslint/parser",
+      "extends": ["preact"]
+    },
+    {
       "files": ["*.js", "*.jsx"],
       "rules": {}
     }
