--- a/apps/web/.babelrc
+++ b/apps/web/.babelrc
@@ -7,5 +7,13 @@
       }
     ]
   ],
-  "plugins": []
+  "plugins": [
+    [
+      "@babel/plugin-transform-react-jsx",
+      {
+        "pragma": "h",
+        "pragmaFrag": "Fragment"
+      }
+    ]
+  ]
 }
