--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@nrwl/tao": "12.10.0",
     "@nrwl/web": "12.10.0",
     "@nrwl/workspace": "12.10.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-rc.2",
     "@testing-library/react": "11.2.6",
     "@testing-library/react-hooks": "7.0.1",
     "@types/inquirer": "^7.3.3",
@@ -70,6 +71,7 @@
     "@typescript-eslint/eslint-plugin": "~4.31.1",
     "@typescript-eslint/parser": "~4.31.1",
     "babel-jest": "27.2.3",
+    "copy-webpack-plugin": "^9.0.1",
     "cypress": "^8.3.0",
     "eslint": "7.22.0",
     "eslint-config-preact": "^1.1.4",
@@ -82,10 +84,19 @@
     "husky": "^7.0.1",
     "jest": "27.2.3",
     "lint-staged": "^11.1.2",
+    "mini-css-extract-plugin": "^2.1.0",
     "pkg": "^5.1.0",
     "prettier": "2.3.2",
+    "react-refresh": "^0.10.0",
+    "source-map-loader": "^3.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "ts-jest": "27.0.5",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "webpack": "^5.47.0",
+    "webpack-dev-server": "4.0.0-rc.0",
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0",
+    "webpack-sources": "^3.0.2"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown",
