--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "test": "nx test"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.4",
     "async-sema": "^3.1.0",
     "commander": "^7.2.0",
     "core-js": "^3.6.5",
