--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
       "files": ["*.ts", "*.tsx"],
       "extends": [
         "plugin:@nrwl/nx/typescript",
+        "plugin:@typescript-eslint/recommended",
         "plugin:import/recommended",
         "plugin:import/typescript"
       ],
