--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.4",
+    "@tauri-apps/api": "^1.0.0-beta.8",
     "async-sema": "^3.1.0",
     "commander": "^7.2.0",
     "core-js": "^3.6.5",
@@ -59,6 +60,7 @@
     "@nrwl/web": "12.10.0",
     "@nrwl/workspace": "12.10.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-rc.2",
+    "@tauri-apps/cli": "^1.0.0-beta.10",
     "@testing-library/react": "11.2.6",
     "@testing-library/react-hooks": "7.0.1",
     "@types/inquirer": "^7.3.3",
