--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.4",
     "@tauri-apps/api": "^1.0.0-beta.8",
     "async-sema": "^3.1.0",
     "commander": "^7.2.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.4",
+    "formik": "^2.2.9",
+    "html-react-parser": "^1.4.0",
     "inquirer": "^8.1.2",
+    "luxon": "^2.0.2",
     "node-fetch": "^2.6.1",
     "pino": "^6.11.3",
     "pino-multi-stream": "^5.3.0",
@@ -45,7 +49,8 @@
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
     "semver": "^7.3.5",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.14.9",
