perf: improved bundle size with new Babel plugin (hopefully)

--- a/apps/web/.babelrc
+++ b/apps/web/.babelrc
@@ -14,6 +14,10 @@
         "pragma": "h",
         "pragmaFrag": "Fragment"
       }
+    ],
+    [
+      "babel-plugin-direct-import",
+      { "modules": ["@mui/material", "@mui/icons-material", "@mui/lab"] }
     ]
   ]
 }
