--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@typescript-eslint/eslint-plugin": "~4.31.1",
     "@typescript-eslint/parser": "~4.31.1",
     "babel-jest": "27.2.3",
+    "babel-plugin-direct-import": "^0.9.2",
     "copy-webpack-plugin": "^9.0.1",
     "cypress": "^8.3.0",
     "eslint": "7.22.0",
