--- a/package.json
+++ b/package.json
@@ -113,8 +113,11 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown",
-    "*.{ts,tsx,js}": [
+    "*.{ts,js}": [
       "yarn lint"
+    ],
+    "*.tsx": [
+      "nx lint web"
     ]
   }
 }
