--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "drivetest-ca-availabilities",
   "version": "1.5.0",
   "description": "See available dates for driving test on drivetest.ca",
-  "main": "index.js",
+  "main": "./dist/apps/gui/main.js",
   "repository": "https://github.com/silverAndroid/drivetest-ca-availabilities.git",
   "author": "Rushil Perera <rushil.perera1081@gmail.com>",
   "license": "MIT",
@@ -15,10 +15,12 @@
     "start:web": "nx serve web",
     "build:web": "nx build web",
     "prepare": "husky install",
-    "start": "nx serve",
-    "build": "nx build",
+    "prestart": "nx build gui",
+    "start": "electron-forge start",
     "test": "nx test",
-    "lint": "nx run-many --target=lint --all"
+    "lint": "nx run-many --target=lint --all",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "dependencies": {
     "@datorama/akita": "^6.2.4",
@@ -27,11 +29,11 @@
     "@mui/icons-material": "^5.0.4",
     "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.4",
-    "@tauri-apps/api": "^1.0.0-beta.8",
     "async-sema": "^3.1.0",
     "commander": "^7.2.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.4",
+    "electron-squirrel-startup": "^1.0.0",
     "formik": "^2.2.9",
     "html-react-parser": "^1.4.0",
     "inquirer": "^8.1.2",
@@ -58,6 +60,11 @@
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@datorama/akita-cli": "^6.1.1",
+    "@electron-forge/cli": "^6.0.0-beta.61",
+    "@electron-forge/maker-deb": "^6.0.0-beta.61",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.61",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
+    "@electron-forge/maker-zip": "^6.0.0-beta.61",
     "@nrwl/cli": "12.10.0",
     "@nrwl/cypress": "12.10.0",
     "@nrwl/eslint-plugin-nx": "12.10.0",
@@ -69,7 +76,6 @@
     "@nrwl/web": "12.10.0",
     "@nrwl/workspace": "12.10.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-rc.2",
-    "@tauri-apps/cli": "^1.0.0-beta.10",
     "@testing-library/react": "11.2.6",
     "@testing-library/react-hooks": "7.0.1",
     "@types/inquirer": "^7.3.3",
@@ -89,6 +95,7 @@
     "babel-plugin-direct-import": "^0.9.2",
     "copy-webpack-plugin": "^9.0.1",
     "cypress": "^8.3.0",
+    "electron": "15.2.0",
     "eslint": "7.22.0",
     "eslint-config-preact": "^1.1.4",
     "eslint-config-prettier": "8.1.0",
@@ -127,5 +134,32 @@
     "basePath": "./libs/store/src/lib",
     "template": "ts",
     "customFolderName": "true"
+  },
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "drivetest_ca_availabilities"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
+    }
   }
 }
