--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "node ./dist/cli.js",
+    "start": "node ./dist/cli/cli.js",
     "build": "tsc",
-    "package": "pkg -c ./pkg.config.json -o drivetest-availabilities ./dist/cliPkg.js",
+    "package": "pkg -c ./pkg.config.json -o drivetest-availabilities ./dist/cli/cliPkg.js",
     "package:dev": "yarn build && yarn package",
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@datorama/akita-cli": "^6.1.1",
     "@types/inquirer": "^7.3.3",
     "@types/node-fetch": "^2.5.8",
     "@types/pino": "^6.3.8",
@@ -26,9 +27,10 @@
     "lint-staged": "^11.1.2",
     "pkg": "^5.1.0",
     "prettier": "2.3.2",
-    "typescript": "^4.1.3"
+    "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@datorama/akita": "^6.2.4",
     "async-sema": "^3.1.0",
     "commander": "^7.2.0",
     "dayjs": "^1.10.4",
@@ -41,9 +43,16 @@
     "puppeteer": "5",
     "puppeteer-extra": "^3.1.18",
     "puppeteer-extra-plugin-stealth": "^2.7.8",
-    "semver": "^7.3.5"
+    "rxjs": "^7.4.0",
+    "semver": "^7.3.5",
+    "tslib": "^2.3.1"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "akitaCli": {
+    "basePath": "./store",
+    "template": "ts",
+    "customFolderName": "true"
   }
 }
