--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@datorama/akita-cli": "^6.1.1",
     "@types/inquirer": "^7.3.3",
+    "@types/module-alias": "^2.0.1",
     "@types/node-fetch": "^2.5.8",
     "@types/pino": "^6.3.8",
     "@types/pino-multi-stream": "^5.1.1",
@@ -35,6 +36,7 @@
     "commander": "^7.2.0",
     "dayjs": "^1.10.4",
     "inquirer": "^8.1.2",
+    "module-alias": "^2.2.2",
     "node-fetch": "^2.6.1",
     "pino": "^6.11.3",
     "pino-multi-stream": "^5.3.0",
