--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
   "devDependencies": {
     "@datorama/akita-cli": "^6.1.1",
     "@types/inquirer": "^7.3.3",
+    "@types/module-alias": "^2.0.1",
     "@types/node-fetch": "^2.5.8",
     "@types/pino": "^6.3.8",
     "@types/pino-multi-stream": "^5.1.1",
     "@types/puppeteer": "^5.4.4",
     "@types/semver": "^7.3.5",
     "@types/tough-cookie": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^8.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.2",
     "pkg": "^5.1.0",
@@ -35,6 +41,7 @@
     "commander": "^7.2.0",
     "dayjs": "^1.10.4",
     "inquirer": "^8.1.2",
+    "module-alias": "^2.2.2",
     "node-fetch": "^2.6.1",
     "pino": "^6.11.3",
     "pino-multi-stream": "^5.3.0",
@@ -48,7 +55,8 @@
     "tslib": "^2.3.1"
   },
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+    "**/*": "prettier --write --ignore-unknown",
+    "*.ts": "eslint . --ext .ts"
   },
   "akitaCli": {
     "basePath": "./store",
