--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true, 
     "skipLibCheck": true,          
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "plugins": [
+      { "transform": "typescript-transform-paths" },
+    ]
   }
 }
