--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "pino-multi-stream": "^5.3.0",
     "pino-pretty": "^4.7.1",
     "progress": "^2.0.3",
-    "puppeteer": "5",
-    "puppeteer-extra": "^3.1.18",
-    "puppeteer-extra-plugin-stealth": "^2.7.8",
+    "puppeteer": "^11.0.0",
+    "puppeteer-extra": "^3.2.3",
+    "puppeteer-extra-plugin-stealth": "^2.9.0",
     "rxjs": "^7.4.0",
     "semver": "^7.3.5",
     "tslib": "^2.3.1"
